--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "wanbao",
   "type": "module",
-  "version": "2.0.0",
+  "version": "1.0.0",
+  "description": "玩報 WANBAO - 專注遊戲攻略與 VTuber 資訊的獨立遊戲媒體",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -9,5 +10,14 @@
   },
   "dependencies": {
     "astro": "^4.0.0"
-  }
+  },
+  "keywords": [
+    "玩報",
+    "WANBAO",
+    "遊戲攻略",
+    "VTuber",
+    "台灣遊戲媒體"
+  ],
+  "author": "玩報編輯部",
+  "license": "MIT"
 }
